gen/SmoolaParser.java
// Generated from /Users/hoda/Desktop/untitled/src/Smoola.g4 by ANTLR 4.7

        import main.ast.node.*;
        import main.ast.node.expression.*;
        import main.ast.node.declaration.*;
        import main.ast.*;
        import main.ast.Type.ArrayType.*;
        import main.ast.Type.UserDefinedType.*;
        import main.ast.Type.PrimitiveType.*;
        import main.ast.Type.*;
        import java.util.ArrayList;
        import main.ast.node.statement.*;
        import main.ast.node.expression.BinOp.BinaryOperator;
        import main.ast.node.expression.Value.*;
    
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SmoolaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, CONST_NUM=43, CONST_STR=44, NL=45, 
		ID=46, COMMENT=47, WS=48;
	public static final int
		RULE_program = 0, RULE_mainClass = 1, RULE_classDeclaration = 2, RULE_varDeclaration = 3, 
		RULE_methodDeclaration = 4, RULE_statements = 5, RULE_statement = 6, RULE_statementBlock = 7, 
		RULE_statementCondition = 8, RULE_statementLoop = 9, RULE_statementWrite = 10, 
		RULE_statementAssignment = 11, RULE_expression = 12, RULE_expressionAssignment = 13, 
		RULE_expressionOr = 14, RULE_expressionOrTemp = 15, RULE_expressionAnd = 16, 
		RULE_expressionAndTemp = 17, RULE_expressionEq = 18, RULE_expressionEqTemp = 19, 
		RULE_expressionCmp = 20, RULE_expressionCmpTemp = 21, RULE_expressionAdd = 22, 
		RULE_expressionAddTemp = 23, RULE_expressionMult = 24, RULE_expressionMultTemp = 25, 
		RULE_expressionUnary = 26, RULE_expressionMem = 27, RULE_expressionMemTemp = 28, 
		RULE_expressionMethods = 29, RULE_expressionMethodsTemp = 30, RULE_expressionOther = 31, 
		RULE_type = 32;
	public static final String[] ruleNames = {
		"program", "mainClass", "classDeclaration", "varDeclaration", "methodDeclaration", 
		"statements", "statement", "statementBlock", "statementCondition", "statementLoop", 
		"statementWrite", "statementAssignment", "expression", "expressionAssignment", 
		"expressionOr", "expressionOrTemp", "expressionAnd", "expressionAndTemp", 
		"expressionEq", "expressionEqTemp", "expressionCmp", "expressionCmpTemp", 
		"expressionAdd", "expressionAddTemp", "expressionMult", "expressionMultTemp", 
		"expressionUnary", "expressionMem", "expressionMemTemp", "expressionMethods", 
		"expressionMethodsTemp", "expressionOther", "type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'{'", "'def'", "'()'", "':'", "'int'", "'return'", "';'", 
		"'}'", "'extends'", "'var'", "'('", "','", "')'", "'if'", "'then'", "'else'", 
		"'while'", "'writeln('", "'='", "'||'", "'&&'", "'=='", "'<>'", "'<'", 
		"'>'", "'+'", "'-'", "'*'", "'/'", "'!'", "'['", "']'", "'.'", "'length'", 
		"'new '", "'this'", "'true'", "'false'", "'boolean'", "'string'", "'int[]'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "CONST_NUM", "CONST_STR", "NL", 
		"ID", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Smoola.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	        void setPosition( Node node , int line , int col )
	        {
	            node.setLineNum( line );
	            node.setColNum( col );
	        }
	        ClassDeclaration constructObjectClass()
	        {
	            ClassDeclaration objectClass = new ClassDeclaration( new Identifier( "Object" ) , null );
	            MethodDeclaration toStringMethod = new MethodDeclaration( new Identifier( "toString" ) );
	            toStringMethod.setActualReturnType( new StringType() );
	            toStringMethod.setReturnValue( new StringValue( "Object" , new StringType() ) );
	            objectClass.addMethodDeclaration( toStringMethod );
	            return objectClass;
	        }
	        void print (Object obj) {
	          System.out.println("haha");
	          System.out.println(obj);
	        }
	    
	public SmoolaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program returnedProgram;
		public Program myProgram;
		public MainClassContext myClass;
		public ClassDeclarationContext otherClass;
		public TerminalNode EOF() { return getToken(SmoolaParser.EOF, 0); }
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmoolaVisitor ) return ((SmoolaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			            ((ProgramContext)_localctx).myProgram =  new Program();
			        
			setState(67);
			((ProgramContext)_localctx).myClass = mainClass();

			            _localctx.myProgram.setMainClass( ((ProgramContext)_localctx).myClass.mainClassDeclaration );
			        
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(69);
				((ProgramContext)_localctx).otherClass = classDeclaration();

				            _localctx.myProgram.addClass( ((ProgramContext)_localctx).otherClass.myClassDeclaration );
				        
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(EOF);

			            ClassDeclaration objectClass = constructObjectClass();
			            ((ProgramContext)_localctx).returnedProgram =  _localctx.myProgram;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public ClassDeclaration mainClassDeclaration;
		public MethodDeclaration mainMethodDec;
		public Token className;
		public Token mainMethod;
		public StatementsContext stats;
		public ExpressionContext retExpr;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitMainClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmoolaVisitor ) return ((SmoolaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			((MainClassContext)_localctx).className = match(ID);

			            ((MainClassContext)_localctx).mainClassDeclaration =  new ClassDeclaration( new Identifier( (((MainClassContext)_localctx).className!=null?((MainClassContext)_localctx).className.getText():null) ) , null );
			            setPosition( _localctx.mainClassDeclaration.getName() , ((MainClassContext)_localctx).className.getLine() , ((MainClassContext)_localctx).className.getCharPositionInLine() );

			        
			setState(83);
			match(T__1);
			setState(84);
			match(T__2);
			setState(85);
			((MainClassContext)_localctx).mainMethod = match(ID);
			setState(86);
			match(T__3);
			setState(87);
			match(T__4);
			setState(88);
			match(T__5);

			            ((MainClassContext)_localctx).mainMethodDec =  new MainMethodDeclaration( new Identifier( (((MainClassContext)_localctx).mainMethod!=null?((MainClassContext)_localctx).mainMethod.getText():null) ) ) ;
			            _localctx.mainMethodDec.setActualReturnType( new IntType() );
			            setPosition( _localctx.mainMethodDec.getName() , ((MainClassContext)_localctx).mainMethod.getLine() , ((MainClassContext)_localctx).mainMethod.getCharPositionInLine() );
			        
			setState(90);
			match(T__1);
			setState(91);
			((MainClassContext)_localctx).stats = statements();
			setState(92);
			match(T__6);
			setState(93);
			((MainClassContext)_localctx).retExpr = expression();
			setState(94);
			match(T__7);
			setState(95);
			match(T__8);
			setState(96);
			match(T__8);

			            _localctx.mainMethodDec.setReturnValue( ((MainClassContext)_localctx).retExpr.finalExpr );
			            for( Statement stat: ((MainClassContext)_localctx).stats.myStatements )
			            {
			               _localctx.mainMethodDec.addStatement( stat );
			            }
			            _localctx.mainClassDeclaration.addMethodDeclaration( _localctx.mainMethodDec );
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclaration myClassDeclaration;
		public Token className;
		public Token parentClassName;
		public VarDeclarationContext curVarDec;
		public MethodDeclarationContext methodDec;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmoolaVisitor ) return ((SmoolaVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__0);
			setState(100);
			((ClassDeclarationContext)_localctx).className = match(ID);

			            ((ClassDeclarationContext)_localctx).myClassDeclaration =  new ClassDeclaration( new Identifier( (((ClassDeclarationContext)_localctx).className!=null?((ClassDeclarationContext)_localctx).className.getText():null) ) , null );
			            setPosition( _localctx.myClassDeclaration.getName() , ((ClassDeclarationContext)_localctx).className.getLine() , ((ClassDeclarationContext)_localctx).className.getCharPositionInLine() );

			        
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(102);
				match(T__9);
				setState(103);
				((ClassDeclarationContext)_localctx).parentClassName = match(ID);

				            _localctx.myClassDeclaration.setParentName( new Identifier( (((ClassDeclarationContext)_localctx).parentClassName!=null?((ClassDeclarationContext)_localctx).parentClassName.getText():null) ) );
				            setPosition( _localctx.myClassDeclaration.getParentName() , ((ClassDeclarationContext)_localctx).parentClassName.getLine() , ((ClassDeclarationContext)_localctx).parentClassName.getCharPositionInLine() );
				        
				}
			}

			setState(107);
			match(T__1);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(108);
				((ClassDeclarationContext)_localctx).curVarDec = varDeclaration();

				                _localctx.myClassDeclaration.addVarDeclaration( ((ClassDeclarationContext)_localctx).curVarDec.returnedVarDeclaration );
				            
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(116);
				((ClassDeclarationContext)_localctx).methodDec = methodDeclaration();

				            _localctx.myClassDeclaration.addMethodDeclaration( ((ClassDeclarationContext)_localctx).methodDec.methodDec );
				        
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclaration returnedVarDeclaration;
		public Token varName;
		public TypeContext returnedType;
		public TerminalNode ID() { return getToken(SmoolaParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmoolaVisitor ) return ((SmoolaVisitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__10);
			setState(127);
			((VarDeclarationContext)_localctx).varName = match(ID);
			setState(128);
			match(T__4);
			setState(129);
			((VarDeclarationContext)_localctx).returnedType = type();
			setState(130);
			match(T__7);

			            ((VarDeclarationContext)_localctx).returnedVarDeclaration =  new VarDeclaration( new Identifier( (((VarDeclarationContext)_localctx).varName!=null?((VarDeclarationContext)_localctx).varName.getText():null) ) , ((VarDeclarationContext)_localctx).returnedType.returnedType );
			            setPosition( _localctx.returnedVarDeclaration.getIdentifier() , ((VarDeclarationContext)_localctx).varName.getLine() , ((VarDeclarationContext)_localctx).varName.getCharPositionInLine() );
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDeclaration methodDec;
		public VarDeclaration argDec;
		public Token methodName;
		public Token firstArgName;
		public TypeContext firstArgType;
		public Token otherArgName;
		public TypeContext otherArgType;
		public TypeContext actualReturnType;
		public VarDeclarationContext localVar;
		public StatementsContext stats;
		public ExpressionContext retExpr;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmoolaVisitor ) return ((SmoolaVisitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__2);
			setState(134);
			((MethodDeclarationContext)_localctx).methodName = match(ID);

			            ((MethodDeclarationContext)_localctx).methodDec =  new MethodDeclaration( new Identifier( (((MethodDeclarationContext)_localctx).methodName!=null?((MethodDeclarationContext)_localctx).methodName.getText():null) ) );
			            setPosition( _localctx.methodDec.getName() , ((MethodDeclarationContext)_localctx).methodName.getLine() , ((MethodDeclarationContext)_localctx).methodName.getCharPositionInLine() );
			        
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(136);
				match(T__3);
				}
				break;
			case T__11:
				{
				{
				setState(137);
				match(T__11);
				setState(138);
				((MethodDeclarationContext)_localctx).firstArgName = match(ID);
				setState(139);
				match(T__4);
				setState(140);
				((MethodDeclarationContext)_localctx).firstArgType = type();

				            ((MethodDeclarationContext)_localctx).argDec =  new VarDeclaration( new Identifier( (((MethodDeclarationContext)_localctx).firstArgName!=null?((MethodDeclarationContext)_localctx).firstArgName.getText():null) ) , ((MethodDeclarationContext)_localctx).firstArgType.returnedType );
				            setPosition( _localctx.argDec.getIdentifier() , ((MethodDeclarationContext)_localctx).firstArgName.getLine() , ((MethodDeclarationContext)_localctx).firstArgName.getCharPositionInLine() );
				            _localctx.methodDec.addArg( _localctx.argDec );
				        
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(142);
					match(T__12);
					setState(143);
					((MethodDeclarationContext)_localctx).otherArgName = match(ID);
					setState(144);
					match(T__4);
					setState(145);
					((MethodDeclarationContext)_localctx).otherArgType = type();
